--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,18 @@
 
 /* GLOBAL STYLES */
+html {
+  box-shadow: 0 0 0 30px #000 inset;
+  padding: 0 30px;
+}
 body {
   font-family: helvetica, arial, sans;
 }
 h1 {
   font-size: 7vw;
   margin-top: 0;
+}
+a {
+  color: #f00;
 }
 h2 ~ p {
   font-size: 0.8em;
@@ -14,11 +21,36 @@ h2 ~ p {
   max-width: 70%;
   text-align: center;
 }
-a {
-  color: #f00;
-}
 
 /* HEADER STYLES */
+.header {
+  background-color: #000;
+  color: #fff;
+  position: fixed;
+  width: 100%;
+  z-index: 20;
+}
+.header-logo {
+  background-color: #000;
+  box-sizing: border-box;
+  display: block;
+  height: 10vh;
+  left: -30px;
+  padding-top: 10px;
+  position: relative;
+  text-align: center;
+  width: 10vh;
+  /*left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%); these 3 statements centers the logo */
+}
+.header-logo:hover,
+.header-logo:active {
+  background: #ed6e2f;
+}
+.header-logo img {
+  width: 4.3vh;
+}
 .header-nav {
   float: right;
   padding: 5.5vh 60px 0 0;
@@ -28,29 +60,52 @@ a {
   margin-left: 1em;
 }
 .header-nav > li ~ li {
-  border-left: 1px solid rgba(0, 0, 0, 0.3);
+  border-left: 1px solid rgba(255, 255, 255, 1);
   padding-left: 1em;
 }
 .header-nav a {
-    color: #000;
-    font-size: 0.8rem;
-    font-weight: bold;
-    text-decoration: none;
-    text-transform: uppercase;
+    color: #fff;
 }
-.header-nav a:hover,
-.header-nav a:active {
+.nav-links a {
+  font-size: 0.8rem;
+  font-weight: bold;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+.nav-links a:hover,
+.nav-links a:active {
   color: #ed6e2f;
 }
 .header-nav > li:first-child a {
   color: #ed6e2f;
 }
 .header-nav > li:first-child a:hover {
-  color: #000;
+  color: #fff;
 }
-.header-logo:hover,
-.header-logo:active {
-  opacity: 0.5;
+
+/* FOOTER STYLES */
+.footer {
+  background-color: #000;
+  padding: 10vh 0 15vh;
+  text-align: center;
+}
+.footer-logo img {
+  width: 50px;
+}
+.footer h3 {
+  color: #fff;
+  padding-top: 1.5em;
+  text-transform: uppercase;
+}
+.footer h3 span {
+  color: #aaa;
+}
+.footer-nav li {
+  display: inline-block;
+  margin: 2em 1em 0;
+}
+.footer-nav a {
+  color: #ccc;
 }
 
 /* HERO STYLES */
@@ -60,6 +115,11 @@ a {
 }
 
 /* SOCIAL STYLES */
+.social-list {
+  list-style: none;
+  padding: 0;
+  text-align: center;
+}
 .social-link {
   background: rgba(150, 150, 150, 0.5);
   border-radius: 99px;
@@ -77,18 +137,13 @@ a {
   vertical-align: middle;
   width: 2.5em;
 }
-.social-link:hover,
-.social-link:active {
-  color: blue;
-}
-.social-list {
-  list-style: none;
-  padding: 0;
-  text-align: center;
-}
 .social-list > li {
   display: inline-block;
   margin: 0 0.5em;
+}
+.social-link:hover,
+.social-link:active {
+  color: blue;
 }
 
 /* BIO STYLES */
