--- a/css/main.css
+++ b/css/main.css
@@ -117,8 +117,8 @@ h2 ~ p {
   padding-top: 10vh;
 }
 .hero-home {
-  /*background-image: url(/images/shark.jpg);
-  background-position: center top;*/
+  background-image: url(/images/shark.jpg);
+  background-position: center top;
 }
 .hero-content {
   color: #fff;
